<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.example.myapplication.addToCart.AddToCartViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/addtocarlayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:elevation="@dimen/five"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@color/yellow">

            <ImageView
                android:id="@+id/backarrow"
                android:layout_width="@dimen/backarrowheight"
                android:layout_height="@dimen/backarrowheight"
                android:src="@drawable/back_arrow"
                android:layout_gravity="center"
                android:padding="@dimen/five"
                android:layout_marginStart="@dimen/ten"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cart"
                android:fontFamily="@font/comfortaa_medium"
                android:textSize="@dimen/textsizetitle"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/twoenty"
                android:textColor="@android:color/black"
                />
        </LinearLayout>

       <!-- <androidx.core.widget.ContentLoadingProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="@{String.valueOf(viewModel.loadingStatus).equals(`1`) ? View.VISIBLE: View.GONE}"
            style="?android:attr/progressBarStyleInverse"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />-->

        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/spin_kit"
            style="@style/SpinKitView.Large.Circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:SpinKit_Color="@color/yellow"
            android:visibility="@{String.valueOf(viewModel.loadingStatus).equals(`1`) ? View.VISIBLE: View.GONE}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{String.valueOf(viewModel.norecordfound).equals(`1`) ? View.VISIBLE: View.GONE}"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >

            <RelativeLayout
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:background="@drawable/yellowcircle">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/addtocart_black"
                    android:layout_centerInParent="true"
                    />

            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noitemincart"
                android:layout_gravity="center"
                android:textSize="@dimen/textsize_fourtn"
                android:textColor="@color/textblack"
                />

        </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="@{String.valueOf(viewModel.cartView).equals(`1`) ? View.VISIBLE: View.GONE}"
        android:background="@android:color/white">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey">






    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/addtocartrecyclerview"
        android:layout_width="match_parent"
        android:layout_marginTop="?actionBarSize"
        android:background="@color/grey"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/five"
        android:background="@android:color/white">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totalproducts"
                android:textSize="@dimen/textsize_twl"
                android:fontFamily="@font/comfortaa_medium"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/ten"
                android:layout_marginStart="@dimen/five"
                android:textColor="@android:color/black"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"
                android:textSize="@dimen/textsize_twl"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/ten"
                android:layout_marginStart="@dimen/ten"
                android:textColor="@android:color/black"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.totalquantity}"
                android:layout_marginTop="@dimen/ten"
                android:textSize="@dimen/textsize_fourtn"
                android:layout_marginStart="@dimen/five"
                android:textColor="@android:color/black"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/totalticket"
            android:layout_marginStart="@dimen/five"
            android:textSize="@dimen/textsize_twl"
            android:fontFamily="@font/comfortaa_medium"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"
                android:layout_marginStart="22dp"
                android:textSize="@dimen/textsize_twl"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.totalticket}"
                android:textSize="@dimen/textsize_fourtn"
                android:layout_marginStart="@dimen/five"
                android:textColor="@android:color/black"
                />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/donateaddil"
                android:fontFamily="@font/comfortaa_medium"
                android:layout_marginStart="@dimen/five"
                android:textSize="@dimen/textsize_twl"
                android:textStyle="bold"
                android:layout_centerVertical="true"
                android:textColor="@android:color/black"
                />


            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/donatebutton"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_marginStart="@dimen/ten"
                android:layout_marginEnd="@dimen/ten"
                android:layout_gravity="center"
                app:showText="false"
                android:textSize="@dimen/_20ssp"
                app:track="@drawable/custom_track"
                android:thumb="@drawable/custom_thumb"
                android:layout_height="wrap_content"/>

        </RelativeLayout>




        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iaggree"
            android:layout_marginStart="@dimen/five"
            android:fontFamily="@font/comfortaa_medium"
            android:textSize="@dimen/textsize_twl"
            />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="55dp">


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="@dimen/ten"
                    android:hint="@string/applycoupon"
                    android:layout_toStartOf="@+id/applybtn"
                    android:singleLine="true"
                    android:fontFamily="@font/comfortaa_medium"
                    android:maxLength="10"
                    android:text="@{viewModel.promoCode}"
                    android:onTextChanged="@{viewModel.onTextChangedPromoCode}"
                    android:layout_marginEnd="@dimen/five"
                    android:backgroundTint="@color/yellow"
                    android:textSize="@dimen/textsize_fourtn" />

            <androidx.cardview.widget.CardView
                android:id="@+id/applybtn"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:onClick="@{()-> viewModel.promoCode()}"
                android:layout_marginEnd="@dimen/ten"
                android:layout_marginBottom="@dimen/ten"
                app:cardBackgroundColor="@color/yellow">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apply"
                    android:fontFamily="@font/comfortaa_medium"
                    android:paddingStart="25dp"
                    android:paddingEnd="25dp"
                    android:textColor="@color/textblack"
                    android:textSize="@dimen/textsize_ten"
                    android:layout_gravity="center"
                    />

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:orientation="vertical">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/grandtotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/grantotal"
                    android:fontFamily="@font/comfortaa_medium"
                    android:textStyle="bold"
                    android:layout_marginStart="@dimen/five"
                    android:layout_alignParentTop="true"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/textsize_sixtn"

                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/inclusiveoftax"
                    android:textSize="@dimen/textsize_twl"
                    android:fontFamily="@font/comfortaa_medium"
                    android:layout_marginStart="@dimen/five"
                    android:layout_alignTop="@+id/grandtotal"
                    />

            </LinearLayout>

           <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.totalprice+` AED`}"
                android:textStyle="bold"
                android:layout_marginEnd="@dimen/ten"
                android:layout_alignParentEnd="true"
                android:textColor="@android:color/black"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/proceedtopayment"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/thirty"
            android:layout_marginEnd="@dimen/thirty"
            android:layout_gravity="center"
            android:layout_alignParentEnd="true"
            android:paddingStart="@dimen/fifteen"
            android:paddingEnd="@dimen/fifteen"
            android:layout_marginTop="@dimen/twoenty"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/ten"
            app:cardBackgroundColor="@color/yellow">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/proceedtopayment"
                android:fontFamily="@font/comfortaa_medium"
                android:paddingStart="@dimen/fourty"
                android:paddingEnd="@dimen/fourty"
                android:textColor="@color/textblack"
                android:textSize="@dimen/textsize_twl"
                android:layout_gravity="center"
                />

        </androidx.cardview.widget.CardView>


    </LinearLayout>




</LinearLayout>
    </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>