<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.example.myapplication.contactus.ContactusViewModel" />
    </data>
    <LinearLayout
        android:id="@+id/contactustoplayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="@drawable/background"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten">


                <ImageView
                    android:id="@+id/backarrow"
                    android:layout_width="@dimen/leftarrowheight"
                    android:layout_height="@dimen/leftarrowheight"
                    android:src="@drawable/leftarrow"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/ten"
                    />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contactus"
                android:layout_marginStart="@dimen/five"
                android:gravity="center"
                android:layout_marginTop="@dimen/five"
                android:textColor="@android:color/black"
                android:textSize="@dimen/textsizetitle"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/fourty"
            android:paddingStart="@dimen/fourty"
            android:paddingEnd="@dimen/fourty"
            android:orientation="vertical"
            android:background="@drawable/round_drawable"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/fourty">

                <ImageView
                    android:id="@+id/forgetpasswordIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_centerVertical="true"
                    android:src="@drawable/forgetpassword"
                    >

                </ImageView>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contactus"
                    android:fontFamily="@font/comfortaa_medium"
                    android:layout_centerInParent="true"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/textsize_twoentytwo"
                    />



            </RelativeLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ten"
                android:drawablePadding="@dimen/ten"
                app:layout_constraintTop_toTopOf="parent"
                android:clipChildren="false"
                android:showDividers="end">

                <EditText
                    android:id="@+id/firstnametext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/user_name"
                    android:drawablePadding="@dimen/ten"
                    android:hint="@string/fullname"
                    android:fontFamily="@font/comfortaa_medium"
                    android:maxLength="30"
                    android:onTextChanged="@{viewModel.onTextChangedFullName}"
                    android:singleLine="true"
                    android:text="@{viewModel.fullname}"
                    android:textSize="@dimen/textsize_fourtn" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ten"
                android:drawablePadding="@dimen/ten"
                app:layout_constraintTop_toTopOf="parent"
                android:clipChildren="false"
                android:showDividers="end">

                <EditText
                    android:id="@+id/emailtext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/email_light"
                    android:drawablePadding="@dimen/ten"
                    android:hint="@string/email"
                    android:fontFamily="@font/comfortaa_medium"
                    android:maxLength="30"
                    android:onTextChanged="@{viewModel.onTextChangedEmail}"
                    android:singleLine="true"
                    android:text="@{viewModel.email}"
                    android:textSize="@dimen/textsize_fourtn" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordtext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ten"
                android:drawablePadding="@dimen/ten"
                app:layout_constraintTop_toTopOf="parent"
                android:clipChildren="false"
                android:showDividers="end">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:hint="@string/phoneno"
                    android:drawablePadding="@dimen/ten"
                    android:textSize="@dimen/textsize_fourtn"
                    android:inputType="phone"
                    android:maxLength="15"
                    android:fontFamily="@font/comfortaa_medium"
                    android:drawableLeft="@drawable/lock"
                    android:onTextChanged="@{viewModel.onTextChangedPhoneno}"
                    android:singleLine="true"
                    android:text="@{viewModel.phoneno}"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirmpasswordtext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ten"
                android:drawablePadding="@dimen/ten"
                app:layout_constraintTop_toTopOf="parent"
                android:clipChildren="false"
                android:showDividers="end">

                <EditText
                    android:id="@+id/confirmpassword"
                    android:layout_width="match_parent"
                    android:hint="@string/message"
                    android:drawablePadding="@dimen/ten"
                    android:onTextChanged="@{viewModel.onTextChangedMessage}"
                    android:text="@{viewModel.messageText}"
                    android:textSize="@dimen/textsize_fourtn"
                    android:fontFamily="@font/comfortaa_medium"
                    android:drawableLeft="@drawable/lock"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/signin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/thirty"
                android:layout_marginStart="@dimen/twoenty"
                android:layout_marginEnd="@dimen/twoenty"
                android:onClick="@{()-> viewModel.submit()}"
                app:cardBackgroundColor="@color/yellow">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submit"
                    android:paddingStart="@dimen/fourty"
                    android:paddingEnd="@dimen/fourty"
                    android:fontFamily="@font/comfortaa_medium"
                    android:textColor="@color/textblack"
                    android:textSize="@dimen/textsize_fourtn"
                    android:layout_gravity="center"
                    />

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>
</layout>